@@ -6,6 +6,7 @@
 "(Currently only 'SB Player' is supported.)":"",
 "A playlist with this name already exists":"",
 "About":"",
+"Actions":"",
 "Add":"",
 "Add URL to queue":"",
 "Add a URL to play queue":"",
@@ -216,6 +217,7 @@
 "OK":"",
 "On song change":"",
 "Only showing %1 items":"",
+"Open mini-player":"",
 "Operation cancelled by the user.":"",
 "Options":"",
 "Overwrite":"",
