@@ -51,6 +51,7 @@
 "Automatic":"Automatisch",
 "Automatically sort items on the home screen. Required for iPhone due to this not supporting drag-and-drop.":"Hauptmenüeinträge automatisch sortieren. Wird auf iOS Geräten benötigt, da hier Drag'n'Drop nicht funktioniert.",
 "Basic options":"Grundeinstellungen",
+"Black":"Schwarz",
 "Browse":"Durchsuchen",
 "Browse modes":"Browse-Modi",
 "Browse music library":"Musiksammlung durchsuchen",
@@ -64,6 +65,7 @@
 "Clear queue":"Warteschlange löschen",
 "Close":"Schliessen",
 "Collapse now playing":"Aktuellen Titel verkleinern",
+"Color":"Farbe",
 "Composers":"Komponisten",
 "Conductors":"Dirigenten",
 "Continuous":"Kontinuierlich",
@@ -74,6 +76,8 @@
 "Creator":"Ersteller",
 "Crossfade":"Überblenden",
 "Current play queue":"Aktuelle Wiedergabeliste",
+"Dark":"Dunkel",
+"Dark (colored toolbars)":"Dunkel (mit farbigen Werkzeugleisten)",
 "Days":"Tage",
 "Decrease volume":"Lautstärke verringern",
 "Default player":"Standard Player",
@@ -123,6 +127,7 @@
 "Failed to parse feed":"Fehler beim Auslesen des Feeds",
 "Failed to remove '%1'!":"Fehler beim Entfernen von '%1'!",
 "Failed to remove favorite!":"Favorit entfernen fehlgeschlagen!",
+"Failed to remove podcast!":"Fehler beim Entfernen des Podcasts!",
 "Failed to retreive information.":"Fehler beim Abrufen der Informationen.",
 "Failed to retrieve listing. (%1)":"Liste abrufen fehlgeschlagen!",
 "Failed to save play queue!":"Wiedergabeliste speichern fehlgeschlagen!",
@@ -139,6 +144,7 @@
 "Go to homescreen":"Zum Startbildschirm",
 "Group Players":"Geräte Gruppen",
 "Group members":"Gruppen-Mitglieder",
+"Historic track count":"Anzahl Titel in Historie",
 "Home":"Start",
 "Home screen items":"Hauptmenüeinträge",
 "Homepage":"Startseite",
@@ -155,6 +161,8 @@
 "Larger fonts":"Grössere Schriften",
 "Last scan: %1":"Letztes Durchsuchen: %1",
 "Library":"Musiksammlung",
+"Light":"Hell",
+"Light (colored toolbars)":"Hell (mit farbigen Werkzeugleisten)",
 "Loading...":"Lade...",
 "Lock screen and notification":"Sperrbildschirm und Benachrichtigungen",
 "Lock screen and notification controls will be disabled whilst player is active.":"Sperrbildschirm und Benachrichtigungen werden angezeigt, solange die Wiedergabe läuft.",
@@ -181,6 +189,7 @@
 "Mute":"Stumm schalten",
 "My Music":"Meine Musik",
 "NOTE: 'Application layout' is not saved, as this is a per-device setting.":"Bitte beachten: 'Anwendungs-Layout' wird nicht gespeichert, da dies eine Geräte-spezifische Einstellung ist.",
+"New version available":"Neue Version verfügbar",
 "Next track":"Nächster Titel",
 "No  entries found":"Keine Einträge gefunden",
 "No Player":"Kein Player",
@@ -193,6 +202,7 @@
 "Now Playing":"Aktueller Titel",
 "On song change":"Bei Titel-Wechsel",
 "Only showing %1 items":"Nur %1 Einträge anzeigen",
+"Open mini-player":"Mini-Steuerung öffnen",
 "Operation cancelled by the user.":"Operation durch Anwender unterbrochen.",
 "Options":"Optionen",
 "Overwrite":"Überschreiben",
@@ -242,6 +252,7 @@
 "Restart server":"Server neu starten",
 "Revert":"Zurücksetzen",
 "Revert to default":"Zurück zu Standardeinstellungen",
+"Revert to default settings?":"Standardeinstellungen wieder herstellen?",
 "Sat":"Sam",
 "Saturday":"Samstag",
 "Save":"Speichern",
@@ -250,11 +261,13 @@
 "Save queue":"Warteschlange speichern",
 "Save the current settings as default for new users?":"Aktuelle Einstellungen als Standard für neue Anwender speichern?",
 "Scheduled alarms":"Aktive Wecker",
+"Screensaver":"Bildschirmschoner",
 "Scroll play queue when current track changes.":"Wiedergabeliste aktualisieren wenn Titel wechselt.",
 "Scroll queue to current track":"Zu aktuellem Titel der Warteschlange springen",
 "Search":"Suche",
 "Search for podcasts":"Podcasts suchen",
 "Search library":"Sammlung durchsuchen",
+"Searching...":"Suche...",
 "Select":"Auswählen",
 "Select All":"Alle wählen",
 "Select category":"Wähle Kategorie",
@@ -359,6 +372,7 @@
 "Update playlists":"Wiedergabelisten aktualisieren",
 "Update plugins":"Plugins aktualisieren",
 "Update rescan":"Aktualisieren",
+"Updates available":"Aktualisierung verfügbar",
 "Updating plugins.":"Plugins werden aktualisiert.",
 "Use artist, or album, images as background.":"Interpreten- oder Album-Bild als Hintergrund verwenden.",
 "Use cover of current track as background.":"Plattenülle des aktuellen Titels als Hintergrund verwenden.",
@@ -374,6 +388,7 @@
 "Volume step":"Lautstärke-Abstufung",
 "Wednesday":"Mittwoch",
 "Weds":"Mit",
+"When no song is playing on current player, darken screen (and show date & time) after 60 seconds.":"Wenn nichts wiedergegeben wird, Bildschirm nach 60 Sekunden verdunkeln (und Datum & Zeit anzeigen).",
 "Year Mix":"Jahres-Mix",
 "Year, Album":"Jahr, Album",
 "Year, Artist, Album":"Jahr, Interpret, Album",
@@ -387,6 +402,8 @@
 "%1 Composers":"%1 Komponisten",
 "1 Conductor":"Ein Dirigent",
 "%1 Conductors":"%1 Dirigenten",
+"1 Episode":"Eine Episode",
+"%1 Episodes":"%1 Episoden",
 "1 Genre":"Eine Stilrichtung",
 "%1 Genres":"%1 Stilrichtungen",
 "1 Image":"Ein Bild",
@@ -405,44 +422,29 @@
 "%1 Years":"%1 Jahre",
 "1 day":"Ein Tag",
 "%1 days":"%1 Tage",
+"Actions":"",
 "Album Mix":"",
 "Alt+%1":"",
 "Alt+N":"",
 "Audio":"",
-"Black":"Schwarz",
 "CD Player":"",
-"Color":"Farbe",
 "Ctrl+%1":"",
 "Ctrl+Shift+%1":"",
-"Dark":"Dunkel",
-"Dark (colored toolbars)":"Dunkel (mit farbigen Werkzeugleisten)",
 "E-Mail":"",
-"Failed to remove podcast!":"Fehler beim Entfernen des Podcasts!",
 "Firmware: %1":"",
-"Historic track count":"Anzahl Titel in Historie",
 "IP: %1":"",
 "Information":"",
-"Light":"Hell",
-"Light (colored toolbars)":"Hell (mit farbigen Werkzeugleisten)",
 "Mon":"",
 "Name":"",
-"New version available":"Neue Version verfügbar",
 "OK":"",
 "Pause":"",
 "Plugins":"",
 "Radio":"",
-"Revert to default settings?":"Standardeinstellungen wieder herstellen?",
-"Screensaver":"Bildschirmschoner",
-"Searching...":"Suche...",
 "Server":"",
 "Start":"",
 "Theme":"",
 "URL":"",
-"Updates available":"Aktualisierung verfügbar",
 "Version":"",
-"When no song is playing on current player, darken screen (and show date & time) after 60 seconds.":"Wenn nichts wiedergegeben wird, Bildschirm nach 60 Sekunden verdunkeln (und Datum & Zeit anzeigen).",
 "⌘+%1":"",
-"⌘+Shift+%1":"",
-"1 Episode":"Eine Episode",
-"%1 Episodes":"%1 Episoden"
+"⌘+Shift+%1":""
 }
