@@ -20,6 +20,7 @@
 "(Currently only 'SB Player' is supported.)":"",
 "A playlist with this name already exists":"",
 "About":"",
+"Actions":"",
 "Add":"",
 "Add URL to queue":"",
 "Add a URL to play queue":"",
@@ -220,6 +221,7 @@
 "OK":"",
 "On song change":"",
 "Only showing %1 items":"",
+"Open mini-player":"",
 "Operation cancelled by the user.":"",
 "Options":"",
 "Overwrite":"",
