@@ -208,6 +208,7 @@
 "OK":"OK",
 "On song change":"Transition entre morceaux",
 "Only showing %1 items":"Afficher seulement %1 éléments",
+"Open mini-player":"Ouvrir le mini-lecteur",
 "Operation cancelled by the user.":"Opération annulée par l'utilisateur",
 "Options":"Options",
 "Overwrite":"Ecraser",
@@ -430,6 +431,7 @@
 "%1 Years":"%1 années",
 "1 day":"1 jour",
 "%1 days":"%1 jours",
+"Actions":"",
 "Black":"",
 "Color":"",
 "Dark":"",
