@@ -145,6 +145,7 @@
 "Now Playing":"In riproduzione",
 "On song change":"Al cambio di brano",
 "Only showing %1 items":"Mostro solo %1 elementi",
+"Open mini-player":"Apri mini-player",
 "Operation cancelled by the user.":"Operazione cancellata dall'utente.",
 "Options":"Opzioni",
 "Pin to home screen":"Aggiungi alla schermata home",
@@ -307,6 +308,7 @@
 "%1 Menu":"",
 "%1 seconds":"",
 "A playlist with this name already exists":"",
+"Actions":"",
 "Add URL to queue":"",
 "Add favorite or podcast":"",
 "Add podcast":"",
