@@ -194,6 +194,7 @@
 "OK":"OK",
 "On song change":"Bij veranderen van nummer",
 "Only showing %1 items":"Geeft maar %1 items weer",
+"Open mini-player":"Open mini-speler",
 "Operation cancelled by the user.":"Actie geannuleerd door de gebruiker.",
 "Options":"Opties",
 "Overwrite":"Overschrijven",
@@ -407,6 +408,7 @@
 "1 day":"1 dag",
 "%1 days":"%1 dagen:",
 "%1 Menu":"",
+"Actions":"",
 "Add favorite or podcast":"",
 "All options":"",
 "Basic options":"",
