@@ -194,6 +194,7 @@
 "OK":"Ок",
 "On song change":"При смене песни",
 "Only showing %1 items":"Показывать только %1",
+"Open mini-player":"Открыть мини плеер",
 "Operation cancelled by the user.":"Опереция прервана пользователем",
 "Options":"Опции",
 "Overwrite":"Перезаписать",
@@ -405,6 +406,7 @@
 "1 day":"1 день",
 "%1 days":"%1 дней",
 "%1 Menu":"",
+"Actions":"",
 "Add favorite or podcast":"",
 "All options":"",
 "Basic options":"",
